# Automatic_clips

./: .gitignore  README.md  pyproject.toml
src/automatic_clips/: main.py
